--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,3 @@
-export KEY_FILENAME=""
-export PRIVATE_KEY_PATH=""
+export KEY_FILENAME="id_ed25519"
+export PUBLIC_KEY_PATH="files/$KEY_FILENAME.pub"
+export PRIVATE_KEY_PATH="/Users/$USER/.ssh/$KEY_FILENAME"
